[gd_scene load_steps=5 format=2]

[ext_resource path="res://Gameplay/UI/Bag/close_button.png" type="Texture" id=1]
[ext_resource path="res://Gameplay/UI/CloseButton/CloseButton.gd" type="Script" id=2]

[sub_resource type="Shader" id=1]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform float brightness_modifier = 0.0;

void fragment() {
	vec4 c = texture(TEXTURE, UV);
	c.rgb += vec3(brightness_modifier);
	COLOR = c;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/brightness_modifier = 0.0

[node name="CloseButton" type="TextureButton"]
material = SubResource( 2 )
margin_right = 20.0
margin_bottom = 20.0
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="hide" from="." to="." method="_on_CloseButton_hide"]
[connection signal="mouse_entered" from="." to="." method="_on_CloseButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CloseButton_mouse_exited"]
